--- a/html/welcome.html
+++ b/html/welcome.html
@@ -1,5 +1,14 @@
 <html>
   <body>
+  <script type="text/javascript">
+		if("{{.Name}}" == ""   ) {
+			alert("please your name ");
+		}
+		
+		if( "{{.Age}}" == "") {
+		alert("please your Age");
+		}
+    </script>
     <h1>Welcome to Git World</h1>
     <p>Hello~~</p>
 	<p>My name is {{.Name}}. I'm {{.Age}}</p>
